add logging stuff

--- a/lab01/logging.properties
+++ b/lab01/logging.properties
@@ -8,7 +8,10 @@
 ############################################################
 
 .level=INFO
+
+# Option 1
 handlers=java.util.logging.ConsoleHandler
+java.util.logging.ConsoleHandler.formatter=lorenz.lab01.SingleLineFormatter
 java.util.logging.ConsoleHandler.level=ALL
 
 ############################################################
