refactoring the same

--- a/lab02/logging.properties
+++ b/lab02/logging.properties
@@ -9,6 +9,7 @@
 
 .level=INFO
 handlers=java.util.logging.ConsoleHandler
+java.util.logging.ConsoleHandler.formatter=lorenz.lab02.SingleLineFormatter
 java.util.logging.ConsoleHandler.level=ALL
 
 ############################################################
