--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="lab01"/>
 	<classpathentry kind="src" path="lab02"/>
+	<classpathentry kind="src" path="lab03"/>
+	<classpathentry kind="src" path="lab04"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
