--- a/.classpath
+++ b/.classpath
@@ -4,6 +4,10 @@
 	<classpathentry kind="src" path="lab02"/>
 	<classpathentry kind="src" path="lab03"/>
 	<classpathentry kind="src" path="lab04"/>
+	<classpathentry kind="src" path="lab05"/>
+	<classpathentry kind="src" path="lab06"/>
+	<classpathentry kind="src" path="lab07"/>
+	<classpathentry kind="src" path="final"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
