--- a/lab08/logging.properties
+++ b/lab08/logging.properties
@@ -18,4 +18,4 @@ java.util.logging.ConsoleHandler.level=ALL
 
 lorenz.lab08.ScenarioControl.level=FINE
 lorenz.lab08.RunnerControl.level=FINE
-lorenz.lab08.LorenzSystem.level=FINE
+lorenz.lab08.LorenzScenario.level=FINE
