--- a/.classpath
+++ b/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="src" path="lab06"/>
 	<classpathentry kind="src" path="lab07"/>
 	<classpathentry kind="src" path="lab08"/>
+	<classpathentry kind="src" path="lab09"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
