--- a/.classpath
+++ b/.classpath
@@ -11,5 +11,6 @@
 	<classpathentry kind="src" path="lab07"/>
 	<classpathentry kind="src" path="lab08"/>
 	<classpathentry kind="src" path="lab09"/>
+	<classpathentry kind="src" path="lab10"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
